[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/02_scenes/01_UI/01_Elements/04_LvlSummary/LvlSummary.gd" type="Script" id=1]
[ext_resource path="res://src/02_scenes/01_UI/02_Themes/CustomTheme.tres" type="Theme" id=2]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://src/01_assets/04_Fonts/Mister Pixel Regular.otf"

[sub_resource type="DynamicFont" id=2]
size = 12
font_data = SubResource( 1 )

[node name="LvlSummary" type="CanvasLayer"]
layer = 4
script = ExtResource( 1 )

[node name="RichTextLabel" type="RichTextLabel" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 30.0
margin_top = -42.0
margin_right = -30.0
grow_horizontal = 2
grow_vertical = 2
rect_clip_content = false
theme = ExtResource( 2 )
bbcode_enabled = true
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LvlEndScreen" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SummaryTitle" type="TextureRect" parent="LvlEndScreen"]
margin_right = 400.0
margin_bottom = 34.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.3
theme = ExtResource( 2 )
expand = true

[node name="TitleBody" type="Label" parent="LvlEndScreen/SummaryTitle"]
anchor_right = 1.0
anchor_bottom = 1.0
text = "Please Choose Perk"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PerkContainer" type="HBoxContainer" parent="LvlEndScreen"]
margin_top = 38.0
margin_right = 400.0
margin_bottom = 152.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="PekrDescription" type="TextureRect" parent="LvlEndScreen"]
margin_top = 156.0
margin_right = 400.0
margin_bottom = 225.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.6
expand = true

[node name="DescriptionBody" type="RichTextLabel" parent="LvlEndScreen/PekrDescription"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -8.0
theme = ExtResource( 2 )
custom_fonts/normal_font = SubResource( 2 )
custom_colors/default_color = Color( 1, 1, 1, 1 )
text = "Here Goes Perk Description"
__meta__ = {
"_edit_use_anchors_": false
}
